--- a/app/src/main/res/layout/viewpageritem.xml
+++ b/app/src/main/res/layout/viewpageritem.xml
@@ -5,14 +5,9 @@
     android:background="@color/purple_200"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="100dp"
-        android:src="@drawable/ic_launcher_foreground"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
